--- a/Web_FileManager_With_Spring_Boot/Web_Files_Manager_Front_End/style.css
+++ b/Web_FileManager_With_Spring_Boot/Web_Files_Manager_Front_End/style.css
@@ -56,7 +56,7 @@ table {
 th, td {
     padding: 12px;
     text-align: left;
-    border-bottom: 1px solid cadetblue;
+    border-bottom: 1px solid #F0FFFF;
 }
 
 th {
